ITheadmaster changes refund column changes and subdocumentcategorychanges

--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITHeadDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITHeadDetails.cshtml
@@ -27,7 +27,7 @@
         default:
             break;
     }
-    <tr class="expand table-info">
+    <tr class="expand">
         <td class="expandCollapse" style="font-weight:bold;font-size:large;">+</td>
         <td></td>
         <td style="text-align:Left;font-weight:bold;font-size:large;">
@@ -55,6 +55,7 @@
                         , new { @class = "numericOnly", @disabled = "disabled" })
                 </div>
             </div>
+            <div class="input-group col-md-6"></div>
         </td>
     </tr>
 }
@@ -85,6 +86,7 @@
                         , string.Format("{0:f}", Model.ITReturnDetailsObject.IncomefromSalary)
                         , new { @class = "numericOnly" })
                     </div>
+                    <div class="input-group col-md-6"></div>
                     break;
                 case "HousePropIncome":
                     <div class="col-md-6">
@@ -92,6 +94,7 @@
                     , string.Format("{0:f}", Model.ITReturnDetailsObject.HousePropIncome)
                     , new { @class = "numericOnly" })
                     </div>
+                    <div class="input-group col-md-6"></div>
                     break;
                 case "IncomefromCapGainsLTCG":
                     <div class="col-md-6">
@@ -99,6 +102,7 @@
                         , string.Format("{0:f}", Model.ITReturnDetailsObject.IncomefromCapGainsLTCG)
                         , new { @class = "numericOnly" })
                     </div>
+                    <div class="input-group col-md-6"></div>
                     break;
                 case "IncomefromCapGainsSTCG":
                     <div class="col-md-6">
@@ -106,6 +110,7 @@
                         , string.Format("{0:f}", Model.ITReturnDetailsObject.IncomefromCapGainsSTCG)
                         , new { @class = "numericOnly" })
                     </div>
+                    <div class="input-group col-md-6"></div>
                     break;
                 case "IncomefromBusinessProf":
                     <div class="col-md-6">
@@ -113,6 +118,7 @@
                         , string.Format("{0:f}", Model.ITReturnDetailsObject.IncomefromBusinessProf)
                         , new { @class = "numericOnly" })
                     </div>
+                    <div class="input-group col-md-6"></div>
                     break;
                 case "IncomefromSpeculativeBusiness":
                     <div class="col-md-6">
@@ -120,6 +126,7 @@
                         , string.Format("{0:f}", Model.ITReturnDetailsObject.IncomefromSpeculativeBusiness)
                         , new { @class = "numericOnly" })
                     </div>
+                    <div class="input-group col-md-6"></div>
                     break;
                 case "IncomeFromOtherSources":
                     <div class="col-md-6">
@@ -127,6 +134,7 @@
                         , string.Format("{0:f}", Model.ITReturnDetailsObject.IncomeFromOtherSources)
                         , new { @class = "numericOnly" })
                     </div>
+                    <div class="input-group col-md-6"></div>
                     break;
                 case "DeductChapterVIA":
                     <div class="col-md-6">
@@ -134,12 +142,19 @@
                         , string.Format("{0:f}", Model.ITReturnDetailsObject.DeductChapterVIA)
                         , new { @class = "numericOnly" })
                     </div>
+                    <div class="input-group col-md-6"></div>
                     break;
                 case "ProfitUS115JB":
                     <div class="col-md-6">
                         @Html.TextBoxFor(m => m.ITReturnDetailsObject.ProfitUS115JB
                         , string.Format("{0:f}", Model.ITReturnDetailsObject.ProfitUS115JB)
                         , new { @class = "numericOnly" })
+                    </div>
+                    <div class="input-group col-md-6">
+                        <span class="input-group-addon">
+                            &nbsp;&nbsp;<i class="fa fa-calendar fa-2x" aria-hidden="true">
+                            </i>
+                        </span>
                     </div>
                     break;
                 case "AdvanceTax1installment":
@@ -149,9 +164,9 @@
                         , new { @class = "numericOnly"})
                     </div>
                     <div class="input-group date form_datetime HLV_clacInput col-md-6"
-                            data-date="" data-date-format="dd M yyyy"
-                            data-link-field="ITReturnDetailsObject_AdvanceTax1installmentDate"
-                            data-link-format="dd M yyyy">
+                         data-date="" data-date-format="dd M yyyy"
+                         data-link-field="ITReturnDetailsObject_AdvanceTax1installmentDate"
+                         data-link-format="dd M yyyy">
                         @Html.TextBoxFor(m => m.ITReturnDetailsObject.AdvanceTax1installmentDate
                         , Model.ITReturnDetailsObject.AdvanceTax1installmentDate.HasValue
                         ? Model.ITReturnDetailsObject.AdvanceTax1installmentDate.Value.ToString("dd MMM yyyy")
@@ -294,21 +309,21 @@
                         , string.Format("{0:f}", Model.ITReturnDetailsObject.ForeignTaxCredit)
                         , new { @class = "numericOnly" })
                     </div>
-                break;
+                    break;
                 case "MATCredit":
                     <div class="col-md-6">
                         @Html.TextBoxFor(m => m.ITReturnDetailsObject.MATCredit
                         , string.Format("{0:f}", Model.ITReturnDetailsObject.MATCredit)
                         , new { @class = "numericOnly" })
                     </div>
-                break;
+                    break;
                 case "InterestUS234A":
                     <div class="col-md-6">
                         @Html.TextBoxFor(m => m.ITReturnDetailsObject.InterestUS234A
                         , string.Format("{0:f}", Model.ITReturnDetailsObject.InterestUS234A)
                         , new { @class = "numericOnly" })
                     </div>
-                break;
+                    break;
                 case "InterestUS234B":
                     <div class="col-md-6">
                         @Html.TextBoxFor(m => m.ITReturnDetailsObject.InterestUS234B
@@ -319,7 +334,7 @@
                 case "InterestUS234C":
                     <div class="col-md-6">
                         @Html.TextBoxFor(m => m.ITReturnDetailsObject.InterestUS234C
-                        , string.Format("{0:f}", Model.ITReturnDetailsObject.InterestUS234C)    
+                        , string.Format("{0:f}", Model.ITReturnDetailsObject.InterestUS234C)
                         , new { @class = "numericOnly" })
                     </div>
                     break;
@@ -336,7 +351,7 @@
                         , string.Format("{0:f}", Model.ITReturnDetailsObject.InterestUS220)
                         , new { @class = "numericOnly" })
                     </div>
-                break;
+                    break;
                 case "RefundAdjusted":
                     <div class="col-md-6">
                         @Html.TextBoxFor(m => m.ITReturnDetailsObject.RefundAdjusted
@@ -416,6 +431,33 @@
                         </span>
                     </div>
                     break;
+
+                case "OtherRefundAdjusted":
+                    <div class="col-md-6">
+                        @Html.TextBoxFor(m => m.ITReturnDetailsObject.OtherRefundAdjusted
+                        , string.Format("{0:f}", Model.ITReturnDetailsObject.OtherRefundAdjusted)
+                        , new { @class = "numericOnly" })
+                    </div>
+                    <div class="input-group date form_datetime HLV_clacInput col-md-6"
+                         data-date="" data-date-format="dd M yyyy"
+                         data-link-field="ITReturnDetailsObject_OtherRefundAdjustedDate"
+                         data-link-format="dd M yyyy">
+                        @Html.TextBoxFor(m => m.ITReturnDetailsObject.OtherRefundAdjustedDate
+                        , Model.ITReturnDetailsObject.OtherRefundAdjustedDate.HasValue
+                        ? Model.ITReturnDetailsObject.OtherRefundAdjustedDate.Value.ToString("dd MMM yyyy")
+                        : string.Empty
+                        , new
+                        {
+                            @class = "form-control",
+                            @size = "16",
+                            @value = ""
+                        })
+                        <span class="input-group-addon">
+                            &nbsp;&nbsp;<i class="fa fa-calendar fa-2x" aria-hidden="true">
+                            </i>
+                        </span>
+                    </div>
+                    break;
                 default:
                     break;
             }
@@ -434,7 +476,7 @@
                 @Html.Partial("_ITReturnExtensionList"
                     , Model.ITReturnExtensionListModels[Model.ITHead])
             }
-            </div>
+        </div>
     </td>
 </tr>
 
