--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetailsData.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetailsData.cshtml
@@ -120,6 +120,7 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row col-12"/>
                 </td>
             </tr>
         }
