Fixed style issue on expand collapse

--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITHeadDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITHeadDetails.cshtml
@@ -53,7 +53,7 @@
         default:
             break;
     }
-    <tr class="expand">
+    <tr class="expand table-info">
         <td class="expandCollapse" style="font-weight:bold;font-size:large;">+</td>
         <td></td>
         <td style="text-align:Left;font-weight:bold;font-size:large;">
